# rotide

./: CMakeLists.txt  NOTES  README
include/rotide/: curses.hpp  curses_types.hpp  scripting.hpp
include/rotide/js/: core.hpp
include/rotide/v8/: easy.hpp  type_conversion.hpp
modules/: FindV8.cmake
runtime/: rotide.js
runtime/core/: keyboard.js
src/: curses.cc  rotide.cc  scripting.cc
src/js/: core.cc
src/v8/: type_conversion.cc
